[package]
name = "partition-identity"
version = "0.2.6"
repository = "https://github.com/pop-os/partition-identity"
description = "Find the ID of a device by its path, or find a device path by its ID."
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "MIT"
keywords = ["linux", "partition"]
categories = ["os", "os::unix-apis"]
readme = "README.md"

[dependencies]
err-derive = "0.1.5"
